--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "ali-oss": "^6.23.0",
+    "markdown-it": "^14.1.0",
+    "marked": "^17.0.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/ali-oss": "^6.16.13",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
