--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
     "prettier": "^3.1.1",
+    "terser": "^5.46.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
